# master_project

./: README.md  app.py  pyproject.toml  requirements.txt
configs/: deployment_request.yaml  deployment_request_template.yaml  model_config.yaml
data/models/: credit_model.joblib  model_metadata.json
deploy/: build_lambda.sh  deploy.sh
docs/: business_pitch.html  guide.html  technical_reference.html  user_guide.html
docs/example/: config.yaml  example.ipynb  inference.py  inference_m.py  model_config.yaml  skaler.pkl  tokenizer.pkl
n8n/: workflow_export.json
src/ml_arch_recommender/: __init__.py  demo.py
src/ml_arch_recommender/lambda_function/: handler.py
src/ml_arch_recommender/model/: train.py
src/ml_arch_recommender/scoring/: aws_service_catalog_complete.csv  engine.py
src/ml_arch_recommender/validation/: test_endpoint.py  validate_agent.py
tests/: test_model_train.py  test_scoring_engine.py
